Start the customizations file.

--- a/README.adoc
+++ b/README.adoc
@@ -6,15 +6,18 @@ a technically inclined person from a cold start
 to a fully working and tuned Sovol08 3D printer.
 
 It's based on the experiences I had setting mine up.
+
 Unlike some other guides, the governing philosophy
 is to stay as close as possible to a stock Sovol
 installation and make small, incremental changes
 that are easy to understand and combine with
 modifications by people who aren't me.
 
-* link:setup.html[Build and setup guide]
+* link:setup.adoc[Build and setup guide]
 
-* link:unix-setup.html[Tips and help for Linux and *BSD users]
+* link:unix-setup.adoc[Tips and help for Linux and *BSD users]
+
+* link:customizations.adoc[Tuning and Customizations]
 
 Much of the material in the set-up guide is generic to all Klipper
 printers, but not all of it.
